[gd_scene load_steps=7 format=3 uid="uid://p4004yi344kw"]

[ext_resource type="Texture2D" uid="uid://bg2gyu46wsh8c" path="res://assets/minigames/ants/graphics/hole_01.png" id="1_jbe57"]
[ext_resource type="Script" uid="uid://c3b4mtcxn0ptp" path="res://sources/minigames/ants/word.gd" id="2_ed8h7"]
[ext_resource type="PackedScene" uid="uid://cn2rw06pltyiu" path="res://sources/utils/fx/right.tscn" id="3_hml8s"]
[ext_resource type="LabelSettings" uid="uid://bguqnhiblwick" path="res://resources/themes/minigames_label_settings.tres" id="3_q5w35"]
[ext_resource type="PackedScene" uid="uid://dlmbxcgiv8tpr" path="res://sources/utils/fx/wrong.tscn" id="4_tbe68"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hh1fr"]
size = Vector2(512, 256)

[node name="Word" type="TextureButton"]
disabled = true
texture_normal = ExtResource("1_jbe57")
script = ExtResource("2_ed8h7")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(256, 128)
shape = SubResource("RectangleShape2D_hh1fr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="Label" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Toto"
label_settings = ExtResource("3_q5w35")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightFX" parent="." instance=ExtResource("3_hml8s")]
show_behind_parent = true
layout_mode = 0
offset_left = 256.0
offset_top = 128.0
offset_right = 256.0
offset_bottom = 128.0
mouse_filter = 2

[node name="WrongFX" parent="." instance=ExtResource("4_tbe68")]
layout_mode = 0
offset_left = 256.0
offset_top = 128.0
offset_right = 256.0
offset_bottom = 128.0
mouse_filter = 2

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
